# medevasoft.io

./: CMakeLists.txt  CMakeLists.txt.user.81db09b  CMakeLists.txt.user.89af2c2  CMakeLists.txt.user.a5f8182  README.md  aboutus.cpp  aboutus.h  aboutus.ui  admdel.cpp  admdel.h  admdel.ui  admin.cpp  admin.db  admin.h  admin.ui  admin2.cpp  admin2.h  admin2.ui  admupdate.cpp  admupdate.h  admupdate.ui  db.h  delete.cpp  delete.h  delete.ui  dialog.cpp  dialog.h  dialog.ui  globals.h  index.html  load.cpp  load.h  load.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  record.cpp  record.h  record.ui  (+7 more)
